fixing overflow issues

--- a/public/css/feedback.css
+++ b/public/css/feedback.css
@@ -27,7 +27,8 @@
 }
 
 .whiteGradient {
-    height: 100%;
+    min-height: 100%;
+    /* height: 1500px; */
     width: 50%;
     background-color: var(--pure-white);
     /* background-image: linear-gradient(to right, var(--background-colour), transparent); */
@@ -71,7 +72,8 @@ textarea {
 .hero box-icon {
     display: inline-block;
     flex-shrink: 0;
-    height:100%;
+    min-height:100%;
+    /* height: 1500px; */
     width:30px;
     background-color: var(--purple);
     /* fill: var(--text-colour); */
@@ -111,11 +113,11 @@ textarea {
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100%;
     background-image: url(../images/purplebg.jpg);
     background-size: cover;
     background-position: right;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 form > div {
