--- a/public/css/login.css
+++ b/public/css/login.css
@@ -18,10 +18,13 @@
 
 .hero {
     font-size: 20px;
+    height: 100%;
+    /* min-height: 100%; */
 }
 
 .whiteGradient {
-    height: 100%;
+    /* height: 100%; */
+    min-height: 100%;
     width: 50%;
     background-color: var(--pure-white);
     /* background-image: linear-gradient(to right, var(--background-colour), transparent); */
@@ -54,7 +57,8 @@ input {
 .hero box-icon {
     display: inline-block;
     flex-shrink: 0;
-    height:100%;
+    /* height:100%; */
+    min-height: 100%;
     width:30px;
     background-color: var(--purple);
     /* fill: var(--text-colour); */
@@ -94,11 +98,11 @@ input {
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100%;
     background-image: url(../images/purplebg.jpg);
     background-size: cover;
     background-position: right;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 form > div {
@@ -133,3 +137,12 @@ form input:focus {
         width: 100%;
     }
 }
+
+/* @media screen and (min-height: 800px) {
+    .hero {
+        min-height: 100%;
+    }
+    .whiteGradient {
+        min-height: 100%;
+    }
+} */
