--- a/public/css/signup.css
+++ b/public/css/signup.css
@@ -29,10 +29,11 @@
 
 .hero {
     font-size: 20px;
+    height:100%;
 }
 
 .whiteGradient {
-    height: 100%;
+    min-height: 100%;
     width: 50%;
     background-color: var(--pure-white);
     /* background-image: linear-gradient(to right, var(--background-colour), transparent); */
@@ -44,6 +45,7 @@
 
 .halfbox {
     width: 40%;
+    min-height: 100%;
     text-align: center;
     /* align-items: center; */
 }
@@ -66,6 +68,7 @@ input {
     display: inline-block;
     flex-shrink: 0;
     height:100%;
+    /* min-height: 100%; */
     width:30px;
     background-color: var(--pink);
     /* fill: var(--text-colour); */
@@ -105,11 +108,11 @@ input {
 }
 
 body {
-    min-height: 100vh;
+    min-height: 100%;
     background-image: url(../images/pinkbg.jpg);
     background-size: cover;
     background-position: right;
-    overflow: hidden;
+    /* overflow: hidden; */
 }
 
 form > div {
