--- a/public/css/stylesheet.css
+++ b/public/css/stylesheet.css
@@ -6,6 +6,7 @@ body {
     /* font-size: 18px;
     width: 100vw;
     height: 100vh; */
+    overflow: scroll;
 }
 
 .titleText {
@@ -21,7 +22,8 @@ hr {
 }
 
 .hero {
-    height: 100vh;
+    min-height: 100vh;
+    /* max-height: 600px; */
     display: flex;
     /* justify-content: left;
     align-items: left; */
@@ -30,7 +32,7 @@ hr {
 }
 
 .gradient {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     background-image: linear-gradient(to right, var(--blue), transparent);
     opacity: 1;
